--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Twitter.Web.csproj
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Twitter.Web.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Models\ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\ViewModels\ManageViewModels.cs" />
     <Compile Include="Models\ViewModels\TweetViewModels.cs" />
+    <Compile Include="Models\ViewModels\NotificationViewModels.cs" />
     <Compile Include="Models\ViewModels\UserViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -294,6 +295,8 @@
     <Content Include="Views\Shared\_UserIndex.cshtml" />
     <Content Include="Views\Tweets\_TweetPage.cshtml" />
     <Content Include="Views\Tweets\_PostReply.cshtml" />
+    <Content Include="Views\Notifications\Notifications.cshtml" />
+    <Content Include="Views\Manage\ChangeAvatar.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
