--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Twitter.Web.csproj
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Twitter.Web.csproj
@@ -64,6 +64,14 @@
       <HintPath>..\packages\Glimpse.Mvc5.1.5.3\lib\net45\Glimpse.Mvc5.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Core.2.2.0\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.SystemWeb, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.SystemWeb.2.2.0\lib\net45\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -219,6 +227,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hubs\TweetsHub.cs" />
     <Compile Include="Models\BindingModels\TweetBindingModels.cs" />
     <Compile Include="Models\ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\ViewModels\ManageViewModels.cs" />
@@ -242,6 +251,10 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.signalR-2.2.0.js" />
+    <Content Include="Scripts\jquery.signalR-2.2.0.min.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -249,6 +262,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\tweets\tweets.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -287,15 +301,16 @@
     <Content Include="Views\Shared\_Index.cshtml" />
     <Content Include="Views\Tweets\_PostTweet.cshtml" />
     <Content Include="Views\Users\UserProfile.cshtml" />
-    <Content Include="Views\Tweets\_Tweet.cshtml" />
+    <Content Include="Views\Tweets\_Tweets.cshtml" />
     <Content Include="Views\Users\_Following.cshtml" />
     <Content Include="Views\Users\_Followers.cshtml" />
-    <Content Include="Views\Tweets\_FavoriteTweets.cshtml" />
+    <Content Include="Views\Users\_FavoriteTweets.cshtml" />
     <Content Include="Views\Shared\_UserIndex.cshtml" />
     <Content Include="Views\Tweets\_TweetPage.cshtml" />
     <Content Include="Views\Tweets\_PostReply.cshtml" />
     <Content Include="Views\Notifications\Notifications.cshtml" />
     <Content Include="Views\Manage\ChangeAvatar.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\TweetViewModel.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
