Lots of changes to design. Fixed glitches with controllers

--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Twitter.Web.csproj
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Twitter.Web.csproj
@@ -317,6 +317,7 @@
     <Content Include="Views\Shared\_UsersLayout.cshtml" />
     <Content Include="Views\Shared\_LayoutAnon.cshtml" />
     <Content Include="Views\Manage\_ViewStart.cshtml" />
+    <Content Include="Views\_RedirectMessages.cshtml" />
     <Content Include="Views\Account\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup />
