Fixed commit errors.

--- a/Extracurricular Courses/Blockchain Dev Camp/2. Crypt., Decent., Consensus/Cryptography/Cryptography/Cryptography.csproj
+++ b/Extracurricular Courses/Blockchain Dev Camp/2. Crypt., Decent., Consensus/Cryptography/Cryptography/Cryptography.csproj
@@ -44,7 +44,7 @@
     <Compile Include="BitcoinAddress.cs" />
     <Compile Include="BitcoinAddressGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sha25Builder6.cs" />
+    <Compile Include="Sha256Builder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
