--- a/Extracurricular Courses/Blockchain Dev Camp/3. Wallets, Transactions and Exchanges/BitcoinWallet/BitcoinWallet.csproj
+++ b/Extracurricular Courses/Blockchain Dev Camp/3. Wallets, Transactions and Exchanges/BitcoinWallet/BitcoinWallet.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="HBitcoin" Version="0.1.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Wallets\" />
+  </ItemGroup>
+
 </Project>
